Add CORS warning messages and permission request buttons for OpenAI and Ollama APIs. see #330 and #331

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -242,6 +242,14 @@
           </label>
         </td>
       </tr>
+      <tr class="conntype_ollama_api" id="ollama_api_cors_warning">
+        <td colspan="2" style="text-align:center;">
+          __MSG_remember_CORS__ [<a href="https://micz.it/thunderbird-addon-thunderai/ollama-cors-information/">__MSG_customPrompts_managePrompts_help__</a>]
+          <br><br><b>__MSG_CORS_alternative_1__</b>
+          <br>__MSG_CORS_alternative_2__
+            <br><br><button id="btnGiveAllUrlsPermission_ollama_api">__MSG_CORS_give_allurls_perm__</button>
+        </td>
+      </tr>
       <tr class="conntype_ollama_api">
         <td>
           <label>
@@ -266,6 +274,14 @@
             <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" />
             <br><i class="small_info">__MSG_prefs_OptionText_openai_comp_info_remote__</i>
           </label>
+        </td>
+      </tr>
+      <tr class="conntype_openai_comp_api" id="openai_comp_api_cors_warning">
+        <td colspan="2" style="text-align:center;">
+          __MSG_maybe_CORS_openai_comp__ [<a href="https://micz.it/thunderbird-addon-thunderai/ollama-cors-information/">__MSG_customPrompts_managePrompts_help__</a>]
+          <br><br><b>__MSG_CORS_alternative_1__</b>
+          <br>__MSG_CORS_alternative_2__
+            <br><br><button id="btnGiveAllUrlsPermission_openai_comp_api">__MSG_CORS_give_allurls_perm__</button>
         </td>
       </tr>
       <tr class="conntype_openai_comp_api">
