updated release notes

--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,6 +10,7 @@
       <h2>Version 3.4.0 - ??/??/2025</h2>
       <ul>
         <li>Added a default proofread prompt [<a href="https://github.com/micz/ThunderAI/issues/21">#21</a>].</li>
+        <li>Fix: correctly showing text differences when using {%mail_typed_text%} placeholder.</li>
         <li>...</li>
       </ul>
       <h2>Version 3.3.3 - 12/04/2025</h2>
