Add ChatGPT web permission handling as optional in onboarding and popup. See #293

--- a/pages/onboarding/onboarding.html
+++ b/pages/onboarding/onboarding.html
@@ -14,6 +14,10 @@
 </head>
 <body>
     <div class="content">
+      <div id="chatgpt_web_permission">__MSG_ask_chatgptweb_permission_1__
+        <br>__MSG_ask_chatgptweb_permission_2__
+      </div>
+      <div id="chatgpt_web_permission_ok">__MSG_ask_chatgptweb_permission_ok__</div>
         <div class="section header">
           <h1><img src="../../images/icon.png" class="title-icon"/>ThunderAI</h1>
           <p>
@@ -82,5 +86,7 @@
           </p>
         </div>
     </div>
+    <script src="onboarding.js" type="module"></script>
+    <script src="../../js/mzta-i18n.js"></script>
 </body>
 </html>
