--- a/popup/mzta-popup.html
+++ b/popup/mzta-popup.html
@@ -8,6 +8,9 @@
 </head>
 
 <body>
+<div id="ask_chatgpt_web_perm">__MSG_ask_chatgptweb_permission_1__
+    <br>__MSG_ask_chatgptweb_permission_2_popup__
+</div>
 <div id="mzta_search_banner">
     <div id="_spacer_div">&nbsp;</div>
     <div id="mzta_sending_prompt"><img src="mzta-loading.svg" title="__MSG_SendingPrompt__"></div>
