Add support for checking ThunderAI Sparks version and update related UI messages. Fixes #315

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -376,7 +376,8 @@
       </tr>
       <tr class="get_calendar_event_tr" id="no_sparks">
         <td colspan="2">
-          <span>__MSG_prefs_OptionText_get_calendar_event_Sparks_not_present__</span>
+          <span id="no_sparks_text">__MSG_prefs_OptionText_get_calendar_event_Sparks_not_present__</span>
+          <span id="wrong_sparks_text">__MSG_prefs_OptionText_get_calendar_event_Sparks_wrong_version__</span>
           <br><a href="https://addons.thunderbird.net/it/thunderbird/addon/thunderai-sparks">__MSG_prefs_OptionText_download_now__</a>
         </td>
       </tr>
