Remove label for Action column in custom prompts table for improved layout

--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -91,7 +91,7 @@
                 <th class="sort" data-sort="text">__MSG_customPrompts_form_label_Text__</th>
                 <th class="sort" data-sort="type">__MSG_customPrompts_add_to_menu__</th>
                 <th>Properties</th>
-                <th>__MSG_customPrompts_form_label_Action__</th>
+                <th>&nbsp;</th>
               </tr>
             </thead>
             <tbody class="list">
