--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -16,6 +16,8 @@
         <li>Fix: correctly showing text differences when using {%mail_typed_text%} placeholder.</li>
         <li>Added a check for the presence of the correct version of ThunderAI Sparks [<a href="https://github.com/micz/ThunderAI/issues/315">#315</a>].</li>
         <li>Added the <i>{%empty%}</i> placeholder to prevent the email body from being automatically appended at the end of the prompt [<a href="https://github.com/micz/ThunderAI/issues/345">#345</a>].</li>
+        <li><i>[All APIs]</i> Improved the form asking for additional text [<a href="https://github.com/micz/ThunderAI/issues/97">#97</a>].</li>
+        <li>Various improvements.</li>
         <li>...</li>
       </ul>
       <h2>Version 3.3.3 - 12/04/2025</h2>
