Add 'get task' feature to the options page and added the get_task settings managing page. see #333

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -374,6 +374,16 @@
           </label>
         </td>
       </tr>
+      <tr class="get_task_tr">
+        <td><span>__MSG_prefs_OptionText_get_task__</span>
+        <br><button id="btnManageTaskInfo" class="btn_small">__MSG_prefs_OptionText_btnManageTaskInfo__</button></td>
+        <td>
+          <label>
+            <input type="checkbox" id="get_task" name="get_task" class="option-input" />
+            __MSG_prefs_OptionText_get_task_Info__
+          </label>
+        </td>
+      </tr>
       <tr class="get_calendar_event_tr" id="no_sparks">
         <td colspan="2">
           <span id="no_sparks_text">__MSG_prefs_OptionText_get_calendar_event_Sparks_not_present__</span>
