--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,6 +11,8 @@
       <ul>
         <li><i>[ChatGPT Web]</i> Updated the list of available models in the option page.</li>
         <li><i>[ChatGPT Web]</i> Opening the ChatGPT webpage from the options now enforce the selected model, if any.</li>
+        <li><i>[All APIs]</i> Fix: Really correctly getting the message body even in multilevel subpart messages when processing incoming messages for tags or spam [<a href="https://github.com/micz/ThunderAI/issues/335">#335</a>].</li>
+        <li>Minor improvements.</li>
       </ul>
       <h2>Version 3.3.4 - 14/04/2025</h2>
       <ul>
