Add option for composing emails in plain text format. see #350

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -102,6 +102,17 @@
         </td>
       </tr>
       <tr>
+        <td><label>
+          <span>__MSG_prefs_OptionText_composing_plain_text__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="checkbox" id="composing_plain_text" name="composing_plain_text" class="option-input" />
+            &nbsp;<span>__MSG_prefs_OptionText_composing_plain_text_info__</span>
+          </label>
+        </td>
+      </tr>
+      <tr>
         <td>
           <label>
             <span>__MSG_prefs_Connection_type__</span>
