--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -251,6 +251,17 @@
         </td>
       </tr>
       <tr class="conntype_ollama_api">
+        <td><label>
+          <span>__MSG_prefs_ollama_num_ctx__</span>
+        </label></td>
+        <td>
+          <label>
+            <input type="number" id="ollama_num_ctx" name="ollama_num_ctx" class="option-input"/>
+            <br>__MSG_prefs_ollama_num_ctx_Info__
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_ollama_api">
         <td>
           <label>
             <span>__MSG_Ollama_Models__</span>
