adding options to manage accounts for autotagging. see #327

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -106,6 +106,13 @@
         <br><textarea id="addtags_excl_list" rows="15"></textarea>
         <div class="btn_div"><button id="btn_save_excl_list" disabled>__MSG_save__</button></div>
     </div>
+    <div id="account_selector_container">
+      <div id="account_selector_info"><span class="section_title">__MSG_AccountSelector_AutoTags__</span>
+      <br><span class="infoline">__MSG_AccountSelector_AutoTags_infoline__</span></div>
+      <div id="account_selector_checkboxes"></div>
+      <button type="button" id="accounts_select_all">Select All</button>
+    <button type="button" id="accounts_deselect_all">Deselect All</button>
+    </div>
     <script src="mzta-add-tags.js" type="module"></script>
     <script src="../../js/mzta-i18n.js"></script>
 </body>
