Add account selection info for autotagging feature and update visibility logic. see #327

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -50,7 +50,8 @@
             </td>
           </tr>
           <tr class="add_tags_tr">
-            <td><span>__MSG_prefs_OptionText_add_tags_auto__</span></td>
+            <td><span>__MSG_prefs_OptionText_add_tags_auto__</span>
+            <span class="infoline" id="add_tags_auto_infoline"><br>__MSG_prefs_OptionText_add_tags_auto_Info2__</span></td>
             <td>
               <label>
                 <input type="checkbox" id="add_tags_auto" name="add_tags_auto" class="option-input" />
