Add styling for automatic tagging options in addtags page

--- a/pages/addtags/mzta-add-tags.html
+++ b/pages/addtags/mzta-add-tags.html
@@ -49,7 +49,7 @@
               </label>
             </td>
           </tr>
-          <tr class="add_tags_tr">
+          <tr class="add_tags_tr add_tags_auto">
             <td><span>__MSG_prefs_OptionText_add_tags_auto__</span>
             <span class="infoline" id="add_tags_auto_infoline"><br>__MSG_prefs_OptionText_add_tags_auto_Info2__</span></td>
             <td>
@@ -59,7 +59,7 @@
               </label>
             </td>
           </tr>
-          <tr class="add_tags_tr" id="add_tags_auto_force_existing_tr">
+          <tr class="add_tags_tr add_tags_auto" id="add_tags_auto_force_existing_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_auto_force_existing__</span></td>
             <td>
               <label>
@@ -68,7 +68,7 @@
               </label>
             </td>
           </tr>
-          <tr class="add_tags_tr" id="add_tags_auto_only_inbox_tr">
+          <tr class="add_tags_tr add_tags_auto" id="add_tags_auto_only_inbox_tr">
             <td><span>__MSG_prefs_OptionText_add_tags_auto_only_inbox__</span></td>
             <td>
               <label>
