--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -263,7 +263,7 @@
       </tr>
       <tr class="conntype_ollama_api">
         <td><label>
-          <span>__MSG_prefs_ollama_num_ctx__</span>
+          <span>__MSG_prefs_ollama_num_ctx__ <i>[num_ctx]</i></span>
         </label></td>
         <td>
           <label>
