--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -9,6 +9,7 @@
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
       <h2>Version 3.3.6 - ??/??/2025</h2>
       <ul>
+        <li><i>[All APIs]</i> Fix: Ensure HTML body is generated from plain text if no parts are available when processing incoming messages for tags or spam.</li>
         <li>...</li>
       </ul>
       <h2>Version 3.3.5 - 22/04/2025</h2>
