Add validation function for ChatGPT Web custom data and update related logic. see #277 and #168

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -171,7 +171,7 @@
       </tr>
       <tr class="conntype_chatgpt_web">
         <td><label>
-          <span class="opt_title">__MSG_OpenChatGPTTab_Info__</span>
+          <span>__MSG_OpenChatGPTTab_Info__</span>
         </label></td>
         <td>
             <button id="btnChatGPTWeb_Tab">__MSG_OpenChatGPTTab__</button>
