Add additional information for opening ChatGPT Web and update message formatting

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -170,11 +170,9 @@
         </td>
       </tr>
       <tr class="conntype_chatgpt_web">
-        <td><label>
-          <span>__MSG_OpenChatGPTTab_Info__</span>
-        </label></td>
-        <td>
-            <button id="btnChatGPTWeb_Tab">__MSG_OpenChatGPTTab__</button>
+        <td colspan="2" style="padding:0px 2em;text-align:center;"><span>__MSG_OpenChatGPTTab_Info__</span>
+            <br><br><button id="btnChatGPTWeb_Tab">__MSG_OpenChatGPTTab__</button>
+            <br><br>__MSG_OpenChatGPTTab_Info2__
         </td>
       </tr>
       <tr class="conntype_chatgpt_api">
