--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -17,6 +17,7 @@
         <li>Added a check for the presence of the correct version of ThunderAI Sparks [<a href="https://github.com/micz/ThunderAI/issues/315">#315</a>].</li>
         <li>Added the <i>{%empty%}</i> placeholder to prevent the email body from being automatically appended at the end of the prompt [<a href="https://github.com/micz/ThunderAI/issues/345">#345</a>].</li>
         <li><i>[All APIs]</i> Improved the form asking for additional text [<a href="https://github.com/micz/ThunderAI/issues/97">#97</a>].</li>
+        <li>Custom Prompts form improved.</li>
         <li>Various improvements.</li>
         <li>...</li>
       </ul>
