Add toggle functionality for ChatGPT additional properties in custom prompts. see #277 and #168

--- a/pages/customprompts/mzta-custom-prompts.html
+++ b/pages/customprompts/mzta-custom-prompts.html
@@ -78,7 +78,7 @@
               <input type="text" id="txtNameNew" name="name" class="input_new" tabindex="2">
             </td>
         </tr>
-        <tr id="chatgpt_web_additional_info_toggle"><td colspan="4"><span class="small_info">Show ChatGPT additional properties</span></td></tr>
+        <tr id="chatgpt_web_additional_info_toggle"><td colspan="4"><span class="small_info">__MSG_customPrompts_show_additional_info__</span></td></tr>
         <tr id="chatgpt_web_additional_info"><!-- ChatGPT Web additional info -->
             <td colspan="2">
                 <label for="chatGPTWebModelNew" class="field_title">__MSG_prefs_OptionText_chatgpt_web_model__:</label>
