--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -135,7 +135,7 @@
       <tr class="conntype_chatgpt_web">
         <td><label>
           <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_project__</span>
-          <br><i class="small_info" id="chatgpt_web_project_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b>/g/PROJECT_ID-PROJECT_NAME/project</b>
+          <br><i class="small_info" id="chatgpt_web_project_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b>/g/PROJECT-ID-PROJECT-NAME/project</b>
             <br>__MSG_prefs_OptionText_chatgpt_web_custom_data_info2__</i>
         </label></td>
         <td>
@@ -148,7 +148,7 @@
       <tr class="conntype_chatgpt_web">
         <td><label>
           <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_custom_gpt__</span>
-          <br><i class="small_info" id="chatgpt_web_custom_gpt_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b>/g/CUSTOM_GPT_ID</b>
+          <br><i class="small_info" id="chatgpt_web_custom_gpt_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b>/g/CUSTOM-GPT-ID</b>
             <br>__MSG_prefs_OptionText_chatgpt_web_custom_data_info2__</i>
         </label></td>
         <td>
