Add warning message for Custom GPT setting override in options. see #277 #168

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -155,6 +155,7 @@
           <label>
             <input type="text" id="chatgpt_web_custom_gpt" name="chatgpt_web_custom_gpt" class="option-input" />
             <br>__MSG_prefs_OptionText_chatgpt_web_custom_gpt_info__
+            <br>__MSG_prefs_OptionText_CustomGPT_Warn__
           </label>
         </td>
       </tr>
