Add warning message for temporary chat usage in project settings. See #277

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -166,7 +166,9 @@
         <td>
           <label>
             <input type="checkbox" id="chatgpt_web_tempchat" name="chatgpt_web_tempchat" class="option-input" />
-            &nbsp;<span>__MSG_prefs_OptionText_chatgpt_web_tempchat_info__</span>
+            &nbsp;<span>__MSG_prefs_OptionText_chatgpt_web_tempchat_info__
+              <br>__MSG_prefs_OptionText_Project_No_temporary_chat_warn__
+            </span>
           </label>
         </td>
       </tr>
