--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -7,7 +7,7 @@
   <body>
     <div id="miczBackPrefs"><a href="mzta-options.html">__MSG_backToOptionsText__</a></div>
     <div id="miczRelNotes"><h1>ThunderAI Release Notes</h1>
-      <h2>Version 3.4.0 - ??/??/2025</h2>
+      <h2>Version 3.4.0 - 07/05/2025</h2>
       <ul>
         <li><i>[All APIs]</i> Added a special prompt to get tasks data from emails [<a href="https://github.com/micz/ThunderAI/issues/333">#333</a>]. To use this feature, you must install also the <a href="https://addons.thunderbird.net/it/thunderbird/addon/thunderai-sparks/">Sparks</a> add-on.</li>
         <li><i>[ChatGPT Web]</i> It is now possible to define a Custom GPT or a Project in the options page to be used by default, or directly in a custom prompt to be used only for that prompt [<a href="https://github.com/micz/ThunderAI/issues/168">#168</a>, <a href="https://github.com/micz/ThunderAI/issues/277">#277</a>].</li>
@@ -24,7 +24,6 @@
         <li>Fix a condition when using a prompt from the compose window with a "Do reply" action that is changed in "Substitute Text" [<a href="https://github.com/micz/ThunderAI/issues/353">#353</a>].</li>
         <li>Custom Prompts form improved.</li>
         <li>Various improvements.</li>
-        <li>...</li>
       </ul>
       <h2>Version 3.3.5 - 22/04/2025</h2>
       <ul>
