minor css fixes

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -18,8 +18,8 @@
         <td colspan="2" style="text-align:center;" class="warning"><b>__MSG_hyprland_warning__</b></td>
       </tr>
       <tr>
-        <td><span class="opt_title">__MSG_prefs_OptionText_chatgpt_win_text__</span>
-        <td>
+        <td class="nb"><span class="opt_title">__MSG_prefs_OptionText_chatgpt_win_text__</span>
+        <td class="nb">
           <label>
             <span class="dims_label">__MSG_prefs_OptionText_chatgpt_win_height__</span>
             <input type="number" id="chatgpt_win_height" name="chatgpt_win_height" class="option-input" />
@@ -27,8 +27,8 @@
         </td>
       </tr>
       <tr>
-        <td><i>__MSG_prefs_OptionText_chatgpt_win_dims_info__</i></td>
-        <td>
+        <td class="nt"><i>__MSG_prefs_OptionText_chatgpt_win_dims_info__</i></td>
+        <td class="nt">
           <span class="dims_label">__MSG_prefs_OptionText_chatgpt_win_width__</span>
           <input type="number" id="chatgpt_win_width" name="chatgpt_win_width" class="option-input" />
         </td>
@@ -103,7 +103,7 @@
       </tr>
       <tr>
         <td><label>
-          <span>__MSG_prefs_OptionText_composing_plain_text__</span>
+          <span class="opt_title">__MSG_prefs_OptionText_composing_plain_text__</span>
         </label></td>
         <td>
           <label>
@@ -146,7 +146,7 @@
       <tr class="conntype_chatgpt_web">
         <td><label>
           <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_project__</span>
-          <br><i class="small_info" id="chatgpt_web_project_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b>/g/PROJECT-ID-PROJECT-NAME/project</b>
+          <br><i class="small_info" id="chatgpt_web_project_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b class="lightbold">/g/PROJECT-ID-PROJECT-NAME/project</b>
             <br>__MSG_prefs_OptionText_chatgpt_web_custom_data_info2__</i>
         </label></td>
         <td>
@@ -159,7 +159,7 @@
       <tr class="conntype_chatgpt_web">
         <td><label>
           <span class="opt_title">__MSG_prefs_OptionText_chatgpt_web_custom_gpt__</span>
-          <br><i class="small_info" id="chatgpt_web_custom_gpt_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b>/g/CUSTOM-GPT-ID</b>
+          <br><i class="small_info" id="chatgpt_web_custom_gpt_info">__MSG_prefs_OptionText_chatgpt_web_custom_data_info__ <b class="lightbold">/g/CUSTOM-GPT-ID</b>
             <br>__MSG_prefs_OptionText_chatgpt_web_custom_data_info2__</i>
         </label></td>
         <td>
@@ -290,7 +290,7 @@
       </tr>
       <tr class="conntype_ollama_api">
         <td><label>
-          <span>__MSG_prefs_ollama_num_ctx__ <i>[num_ctx]</i></span>
+          <span class="opt_title">__MSG_prefs_ollama_num_ctx__ <i>[num_ctx]</i></span>
         </label></td>
         <td>
           <label>
