max_tokens added to anthropic. see #349

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -425,11 +425,15 @@
           </label>
         </td>
       </tr>
-
-
-
-
-
+      <tr class="conntype_anthropic_api">
+        <td><span class="opt_title">__MSG_prefs_OptionText_anthropic_max_tokens__</span></td>
+        <td>
+          <label>
+            <input type="number" id="anthropic_max_tokens" name="anthropic_max_tokens" class="option-input" />
+            <br>__MSG_prefs_OptionText_anthropic_max_tokens_Info__
+          </label>
+        </td>
+      </tr>
       <tr id="max_prompt_length_tr">
         <td><span class="opt_title">__MSG_prefs_OptionText_max_prompt_length__</span></td>
         <td>
