--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -10,6 +10,7 @@
       <h2>Version 3.5.0 - ??/??/2025</h2>
       <ul>
         <li>Fix: in the Spamfilter page the unsaved changes warning is now correctly shown.</li>
+        <li>Fixed incoming emails elaboration that was failing when the auto tagging was enabled and then the complete tagging feature was disabled.</li>
         <li>...</li>
       </ul>
       <h2>Version 3.4.1 - 12/05/2025</h2>
