OpenAI Comp services shorcut added. see #378

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -316,13 +316,25 @@
       </tr>
       <tr class="conntype_openai_comp_api">
         <td><label>
+          <span class="opt_title">__MSG_prefs_OpenAIComp_AvailableServices__</span>
+        </label></td>
+        <td>
+          <label>
+            <select id="openai_comp_services_shortcut">
+            </select>
+            <br>__MSG_prefs_OpenAIComp_AvailableServices_Info__
+          </label>
+        </td>
+      </tr>
+      <tr class="conntype_openai_comp_api">
+        <td><label>
           <span class="opt_title">__MSG_prefs_API_Host__</span>
           <br><i class="small_info">__MSG_prefs_API_Host_Info__ http://localhost:1234</i>
         </label></td>
         <td>
           <label>
             <input type="text" id="openai_comp_host" name="openai_comp_host" class="option-input" />
-            <br><i class="small_info">__MSG_prefs_OptionText_openai_comp_info_remote__</i>
+            <br>__MSG_prefs_OptionText_openai_comp_info_remote__
           </label>
         </td>
       </tr>
