--- a/options/mzta-release-notes.html
+++ b/options/mzta-release-notes.html
@@ -11,7 +11,8 @@
       <ul>
         <li>Added Anthropic API support [<a href="https://github.com/micz/ThunderAI/issues/349">#349</a>].</li>
         <li><i>[OpenAI Comp API]</i>  Added a shortcut to select configurations for known AI services. Currently, <i>Grok AI</i> and <i>Mistral AI</i> are available [<a href="https://github.com/micz/ThunderAI/issues/378">#378</a>]. <a href="https://github.com/micz/ThunderAI/issues/new?template=feature_request.md">Open an issue</a> to request additional services.</li>
-        <li><i>[All APIs]</i> Setting to zero the "Max prompt length" in the options page will disable the check when sending a prompt to the AI [<a href="https://github.com/micz/ThunderAI/issues/380">#380</a>].</li>
+        <li><i>[All APIs]</i> Setting the "Max prompt length" to zero on the options page will disable the length check when sending a prompt to the AI. [<a href="https://github.com/micz/ThunderAI/issues/380">#380</a>].</li>
+        <li><i>[All APIs]</i> Added a button to the options page to reset the 'Max prompt length' value to its default.</li>
         <li>Fix: in the Spamfilter page the unsaved changes warning is now correctly shown.</li>
         <li>Fixed incoming emails elaboration that was failing when the auto tagging was enabled and then the complete tagging feature was disabled.</li>
         <li>...</li>
