Add reset button for max prompt length in options

--- a/options/mzta-options.html
+++ b/options/mzta-options.html
@@ -451,6 +451,7 @@
         <td>
           <label>
             <input type="number" id="max_prompt_length" name="max_prompt_length" class="option-input" />
+            <button type="button" id="reset_max_prompt_length" class="btn_small" style="margin-left:0.5em;">__MSG_reset_default__</button>
             <br>__MSG_prefs_OptionText_max_prompt_length_Info__
           </label>
         </td>
