asking for the correct permission when using the Anthropic API. Fixes #389

--- a/pages/onboarding/onboarding.html
+++ b/pages/onboarding/onboarding.html
@@ -15,9 +15,12 @@
 <body>
     <div class="content">
       <div id="chatgpt_web_permission">__MSG_ask_chatgptweb_permission_1__
-        <br>__MSG_ask_chatgptweb_permission_2__
+        <br>__MSG_ask_integration_permission_2__
       </div>
-      <div id="chatgpt_web_permission_ok">__MSG_ask_chatgptweb_permission_ok__</div>
+      <div id="anthropic_api_permission">__MSG_ask_anthropic_api_permission_1__
+        <br>__MSG_ask_integration_permission_2__
+      </div>
+      <div id="integration_permission_ok">__MSG_ask_integration_permission_ok__</div>
         <div class="section header">
           <h1><img src="../../images/icon.png" class="title-icon"/>ThunderAI</h1>
           <p>
