--- a/popup/mzta-popup.html
+++ b/popup/mzta-popup.html
@@ -9,7 +9,10 @@
 
 <body>
 <div id="ask_chatgpt_web_perm">__MSG_ask_chatgptweb_permission_1__
-    <br>__MSG_ask_chatgptweb_permission_2_popup__
+    <br>__MSG_ask_integration_permission_2_popup__
+</div>
+<div id="ask_anthropic_api_perm">__MSG_ask_anthropic_api_permission_1__
+    <br>__MSG_ask_integration_permission_2_popup__
 </div>
 <div id="mzta_search_banner">
     <div id="_spacer_div">&nbsp;</div>
